2007-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/httpfile.py:
	Pass fd because loseConnection() may/will delete it.

2007-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/httpfile.py:
	Cleanup authentication dicts when a request ends. Fixes a big leak.

2007-06-01  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	* flumotion/component/misc/httpfile/httpfile.xml:
	  Add support for configurable description to on-demand server as
	  well.

2007-06-01  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.xml:
	  Add a description property (which the code already tries to use!)

2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/icalbouncer.xml:
	* flumotion/component/consumers/disker/disker.xml:
	Add base-scheduler dependency on the component bundles.

2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py:
	Add docs to how the filename strftime should work for
	ical triggered events.

2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/base/scheduler.py (Event.__init__,
	  Scheduler.addEvents, ICalScheduler.parseCalendarFromFile,
	  ICalScheduler.parseCalendar):
	Fix debug statement.
	Add new method addEvents that adds (and not replaces) events to the
	scheduler.
	Make parseCalendar return a list of events and not do the replace
	just yet.
	Make parseCalendarFromFile do the replace after running parseCalendar.
	* flumotion/component/consumers/disker/disker.py
	  (DiskerMedium.remote_scheduleRecordings, Disker.configure_pipeline):
	Fix regression of the remote method for scheduling additional
	recordings.

2007-06-01  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/porter/porterclient.py:
	* flumotion/twisted/fdserver.py: